# agent-gatefield

./: .env.example  .gitignore  CHANGELOG.md  README.md  TECH_DEBT_REGISTER.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md  __init__.py  gate_cli.py
config/: gate-config.yaml
datasets/: README.md  accepted_examples.jsonl  constitution_cases.jsonl  drift_sequences.jsonl  high_privilege_actions.jsonl  judgment_logs.jsonl  rejected_examples.jsonl  sample_placeholder.txt  static_violation_suite.jsonl  taboo_cases.jsonl  uncertainty_cases.jsonl
docs/: AGENT_INSTRUCTIONS_LOCAL_RETRIEVAL.md  BIRDEYE.md  EVALUATION.md  RUNBOOK.md  architecture.md  requirements.md  security.md  tasks.md
docs/spec/: ACCEPTANCE_CRITERIA_SPEC.md  API_SPEC.md  CALIBRATION_THRESHOLD_SPEC.md  DATA_TYPES_SPEC.md  INTEGRATION_SPEC.md  PERFORMANCE_SPEC.md  SECURITY_THREAT_MODEL_SPEC.md  STATE_TRANSITION_SPEC.md  TEST_SPEC.md
scripts/: dashboard_queries.sql  init-extensions.sql  monitor_health.py  offline_eval.py  setup-production.ps1  setup-production.sh
src/: __init__.py
src/adapters/: __init__.py  base.py  claude_adapter.py  dataclasses.py  generic_adapter.py  (+4 more)
tests/: conftest.py  test_adapter_base.py  test_adapters.py  test_calibration.py  test_core_init.py  test_distance.py  test_drift_detection.py  test_embedding_worker.py  test_encoder.py  test_encoder_utils.py  test_engine.py  test_engine_coverage.py  test_escalation.py  test_harness.py  test_integration.py  test_local_retrieval.py  test_online_calibration.py  test_pairwise.py  test_promotion.py  test_qdrant_store.py  test_registry.py  test_replay.py  test_rerank.py  test_review_queue.py  test_review_sla_handler.py  test_schema_contract.py  test_scorers.py  test_scorers_base.py  test_security.py  test_self_correction.py  test_sla_handler.py  test_state_gate_alignment.py  test_static_gates.py  test_threshold_versioning.py  test_vector_store.py  test_vector_store_init.py
(+77 files in other folders)
